--- a/.github/workflows/first-actions.yml
+++ b/.github/workflows/first-actions.yml
@@ -7,6 +7,16 @@ jobs:
   first-job:
     runs-on: 	ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v5.0.0
+      - name: Setup Node.js environment
+        uses: actions/setup-node@v4.4.0
+        with:
+          node-version: '20'
+      - name: Install dependencies
+        run: npm install  
+      - name: Run tests
+        run: npm test
       - name: Print greeting
         run: |
           echo "Hellow World!"
