--- a/.github/workflows/first-actions.yml
+++ b/.github/workflows/first-actions.yml
@@ -14,7 +14,9 @@ jobs:
         with:
           node-version: '20'
       - name: Install dependencies
-        run: npm install  
+        run: |
+          npm install  
+          npm install --save-dev jest
       - name: Run tests
         run: npm test
       - name: Print greeting
