--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Repositório destinado ao laboratório de github Actions",
   "main": "._vite.config.js",
   "scripts": {
-    //"test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
